# tubotubo

./: README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
tests/: test.ipynb  test_boston.py
tubotubo/model/: basemodel.py  gbdt.py  model.py
tubotubo/preprocessing/: feature_engineearing.py
tubotubo/preprocessing/feature_enginnearing/: base.py  image.py  text.py
tubotubo/utils/: __init__.py
tubotubo/visualization/: __init__.py
