[tool.poetry]
name = "tubotubo"
version = "0.1.5.4"
description = ""
authors = ["tubo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.4.0"
numpy = "^1.22.1"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
scikit-learn = "1.0.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
tqdm = "^4.62.3"
python-box = "^5.4.1"
ttach = "^0.0.3"
japanize-matplotlib = "^1.1.3"
category-encoders = "^2.3.0"
lightgbm = "^3.3.2"
xgboost = "^1.5.2"
catboost = "^1.0.4"
tensorflow = "^2.7.0"
tensorflow-hub = "^0.12.0"
tensorflow-text = "^2.7.3"
pytest = "^7.0.0"
shap = "^0.40.0"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^7.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
